Setup initial ip address state

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ngxs-labs/dispatch-decorator": "^2.1.0",
+    "@ngxs-labs/immer-adapter": "^3.0.5",
     "@ngxs/store": "^3.7.1",
+    "axios": "^0.21.1",
+    "immer": "^8.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
