--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ngxs-labs/dispatch-decorator": "^2.1.0",
     "@ngxs-labs/immer-adapter": "^3.0.5",
     "@ngxs/store": "^3.7.1",
+    "@types/leaflet": "1.5.22",
     "axios": "^0.21.1",
     "immer": "^8.0.1",
+    "leaflet": "1.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
