--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -26,10 +27,9 @@
     "@ngxs-labs/dispatch-decorator": "^2.1.0",
     "@ngxs-labs/immer-adapter": "^3.0.5",
     "@ngxs/store": "^3.7.1",
-    "@types/leaflet": "1.5.22",
     "axios": "^0.21.1",
     "immer": "^8.0.1",
-    "leaflet": "1.7.1",
+    "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -39,6 +39,7 @@
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
+    "@types/leaflet": "^1.5.22",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
